--- a/orga/app/components/pagination-control.hbs
+++ b/orga/app/components/pagination-control.hbs
@@ -13,29 +13,25 @@
   </div>
   <div class="page-navigation">
     <div class="page-navigation__arrow page-navigation__arrow--previous {{if (eq this.currentPage 1) "page-navigation__arrow--disabled"}}">
-      <LinkTo
+      <PixActionButton
+        @icon="arrow-left"
         aria-label="Aller à la page précédente"
-        @query={{hash pageNumber=this.previousPage}}
-        @disabledWhen={{eq this.currentPage 1}}
-        @replace={{true}}
         class="icon-button icon-button--link"
-      >
-        <FaIcon @icon='arrow-left'></FaIcon>
-      </LinkTo>
+        @triggerAction={{this.goToPreviousPage}}
+        @withBackground={{false}}
+      />
     </div>
     <div>
       Page {{this.currentPage}} / {{this.pageCount}}
     </div>
     <div class="page-navigation__arrow page-navigation__arrow--next {{if (eq this.currentPage this.pageCount) "page-navigation__arrow--disabled"}}">
-      <LinkTo
+      <PixActionButton
+        @icon="arrow-right"
         aria-label="Aller à la page suivante"
-        @query={{hash pageNumber=this.nextPage}}
-        @disabledWhen={{eq this.currentPage this.pageCount}}
-        @replace={{true}}
         class="icon-button icon-button--link"
-      >
-        <FaIcon @icon='arrow-right'></FaIcon>
-      </LinkTo>
+        @triggerAction={{this.goToNextPage}}
+        @withBackground={{false}}
+      />
     </div>
   </div>
 </div>
